--- a/index.html
+++ b/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Football Shirts Dashboard</title>
     <!--MATERIAL ICONS-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
+      rel="stylesheet"
+    />
 
-      <!--STYLE SHEET-->
-      <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <!--STYLE SHEET-->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+        <aside>
+          <div class="top">
+            <div class="logo">
+              <img src="./images/logo.png" alt="Football Shirts Logo" />
+              <h2>Football<span class="danger"> Shirts</span></h2>
+            </div>
+            <div class="close" id="close-btn">
+              <span class="material-icons-sharp"> close </span>
+            </div>
+          </div>
+        </aside>
+      </div>
+  </body>
 </html>
