Added sidebar with icons

--- a/index.html
+++ b/index.html
@@ -16,17 +16,61 @@
   </head>
   <body>
     <div class="container">
-        <aside>
-          <div class="top">
-            <div class="logo">
-              <img src="./images/logo.png" alt="Football Shirts Logo" />
-              <h2>Football<span class="danger"> Shirts</span></h2>
-            </div>
-            <div class="close" id="close-btn">
-              <span class="material-icons-sharp"> close </span>
-            </div>
+      <aside>
+        <div class="top">
+          <div class="logo">
+            <img src="./images/logo.png" alt="Football Shirts Logo" />
+            <h2>Football<span class="danger"> Shirts</span></h2>
           </div>
-        </aside>
-      </div>
+          <div class="close" id="close-btn">
+            <span class="material-icons-sharp"> close </span>
+          </div>
+        </div>
+
+        <div class="sidebar">
+          <a href="#">
+            <span class="material-icons-sharp"> team_dashboard </span>
+            <h3>Dashboard</h3>
+          </a>
+          <a href="#">
+            <span class="material-icons-sharp"> person </span>
+            <h3>Customers</h3>
+          </a>
+          <a href="#">
+            <span class="material-icons-sharp"> receipt_long </span>
+            <h3>Orders</h3>
+          </a>
+          <a href="#">
+            <span class="material-icons-sharp"> insights </span>
+            <h3>Analytics</h3>
+          </a>
+          <a href="#">
+            <span class="material-icons-sharp"> mail outline </span>
+            <h3>Messages</h3>
+            <span class="message-count">26</span>
+          </a>
+          <a href="#">
+            <span class="material-icons-sharp"> checkroom </span>
+            <h3>Products</h3>
+          </a>
+          <a href="#">
+            <span class="material-icons-sharp"> edit_note </span>
+            <h3>Reports</h3>
+          </a>
+          <a href="#">
+            <span class="material-icons-sharp"> grid_view </span>
+            <h3>Add Products</h3>
+          </a>
+          <a href="#">
+            <span class="material-icons-sharp"> settings </span>
+            <h3>Settings</h3>
+          </a>
+          <a href="#">
+            <span class="material-icons-sharp"> logout </span>
+            <h3>Logout</h3>
+          </a>
+        </div>
+      </aside>
+    </div>
   </body>
 </html>
