Added styling to the aside and side bars

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Football Shirts Dashboard</title>
+    <title>Responsive Dashboard using HTML CSS and JavaScript</title>
     <!--MATERIAL ICONS-->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
@@ -12,14 +12,14 @@
     />
 
     <!--STYLE SHEET-->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="container">
       <aside>
         <div class="top">
           <div class="logo">
-            <img src="./images/logo.png" alt="Football Shirts Logo" />
+            <img src="./images/logo.png" alt="" />
             <h2>Football<span class="danger"> Shirts</span></h2>
           </div>
           <div class="close" id="close-btn">
@@ -29,10 +29,10 @@
 
         <div class="sidebar">
           <a href="#">
-            <span class="material-icons-sharp"> team_dashboard </span>
+            <span class="material-icons-sharp"> admin_panel_settings </span>
             <h3>Dashboard</h3>
           </a>
-          <a href="#">
+          <a href="#" class="active">
             <span class="material-icons-sharp"> person </span>
             <h3>Customers</h3>
           </a>
@@ -45,7 +45,7 @@
             <h3>Analytics</h3>
           </a>
           <a href="#">
-            <span class="material-icons-sharp"> mail outline </span>
+            <span class="material-icons-sharp"> mail_outline </span>
             <h3>Messages</h3>
             <span class="message-count">26</span>
           </a>
@@ -58,7 +58,7 @@
             <h3>Reports</h3>
           </a>
           <a href="#">
-            <span class="material-icons-sharp"> grid_view </span>
+            <span class="material-icons-sharp"> add_circle </span>
             <h3>Add Products</h3>
           </a>
           <a href="#">
