--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </div>
           <!-- END OF SALES SECTION -->
           <div class="expenses">
-            <span class="material-icons-sharp"> analytics </span>
+            <span class="material-icons-sharp"> menu_book </span>
             <div class="middle">
               <div class="left">
                 <h3>Total Expenses</h3>
@@ -111,7 +111,7 @@
                   <circle cx="38" cy="38" r="36"></circle>
                 </svg>
                 <div class="number">
-                  <p>81%</p>
+                  <p>62%</p>
                 </div>
               </div>
             </div>
@@ -119,7 +119,7 @@
           </div>
           <!-- END OF EXPENSES SECTION -->
           <div class="income">
-            <span class="material-icons-sharp"> analytics </span>
+            <span class="material-icons-sharp"> trending_up </span>
             <div class="middle">
               <div class="left">
                 <h3>Total Income</h3>
@@ -130,7 +130,7 @@
                   <circle cx="38" cy="38" r="36"></circle>
                 </svg>
                 <div class="number">
-                  <p>81%</p>
+                  <p>44%</p>
                 </div>
               </div>
             </div>
