Added Markup and CSS Styling for Recent Orders table

--- a/index.html
+++ b/index.html
@@ -138,6 +138,61 @@
           </div>
           <!-- END OF INCOME SECTION -->
         </div>
+        <!-- END OF INSIGHTS SECTION -->
+        <div class="recent-orders">
+          <h2>Recent Orders</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>Product Name</th>
+                <th>Product Number</th>
+                <th>Payment</th>
+                <th>Status</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Arsenal 22/23 Away (Black and Gold) Shirt</td>
+                <td>56846</td>
+                <td>Due</td>
+                <td class="warning">Pending</td>
+                <td class="primary">Details</td>
+              </tr>
+              <tr>
+                <td>Real Madrid 21/22 Home (White and Blue) Shirt</td>
+                <td>56847</td>
+                <td>Due</td>
+                <td class="warning">Pending</td>
+                <td class="primary">Details</td>
+              </tr>
+              <tr>
+                <td>Arsenal 21/22 Home (Red and White) Shirt</td>
+                <td>56848</td>
+                <td>Due</td>
+                <td class="warning">Pending</td>
+                <td class="primary">Details</td>
+              </tr>
+              <tr>
+                <td>
+                  Republic of Ireland 21/22 Home (Green, White and Orange) Shirt
+                </td>
+                <td>56849</td>
+                <td>Due</td>
+                <td class="warning">Pending</td>
+                <td class="primary">Details</td>
+              </tr>
+              <tr>
+                <td>Arsenal 05/06 Alternative (Maroon and Gold) Shirt</td>
+                <td>56850</td>
+                <td>Due</td>
+                <td class="warning">Pending</td>
+                <td class="primary">Details</td>
+              </tr>
+            </tbody>
+          </table>
+          <a href="#">Show All</a>
+        </div>
       </main>
     </div>
   </body>
