--- a/index.html
+++ b/index.html
@@ -194,6 +194,70 @@
           <a href="#">Show All</a>
         </div>
       </main>
+      <!-- END OF MAIN -->
+
+      <div class="right">
+        <div class="top">
+          <button id="menu-btn">
+            <span class="material-icons-sharp">menu</span>
+          </button>
+          <div class="theme-toggler">
+            <span class="material-icons-sharp"> light_mode </span>
+            <span class="material-icons-sharp"> dark_mode </span>
+          </div>
+          <div class="profile">
+            <div class="info">
+              <p>Hey, <b>Zain</b></p>
+              <small class="text-muted">Admin</small>
+            </div>
+            <div class="profile-photo">
+              <img src="./images/profile-1.jpg" alt="Admin Profile Picture" />
+            </div>
+          </div>
+        </div>
+        <!-- END OF TOP -->
+        <div class="recent-updates">
+          <h2>Recent Updates</h2>
+          <div class="updates">
+            <div class="update">
+              <div class="profile-photo">
+                <img src="./images/profile-4.jpg" alt="" />
+              </div>
+              <div class="message">
+                <p>
+                  <b>John Smith</b> recieved his order of Arsenal 22/23 Away
+                  (Black and Gold) Shirt
+                </p>
+                <small class="text-muted">40 minutes ago</small>
+              </div>
+            </div>
+            <div class="update">
+              <div class="profile-photo">
+                <img src="./images/profile-2.jpg" alt="" />
+              </div>
+              <div class="message">
+                <p>
+                  <b>Amanda Walters</b> recieved her of Republic of Ireland
+                  21/22 Home (Green, White and Orange) Shirt
+                </p>
+                <small class="text-muted">1 hour and 12 minutes ago</small>
+              </div>
+            </div>
+            <div class="update">
+              <div class="profile-photo">
+                <img src="./images/profile-3.jpg" alt="" />
+              </div>
+              <div class="message">
+                <p>
+                  <b>Stacy Morgan</b> recieved her order of Real Madrid 21/22
+                  Home (White and Blue) Shirt
+                </p>
+                <small class="text-muted">1 hour and 50 minutes ago</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
